Fixed .ReadableAlt class
This class should reference the main container, not the survey
background--so it darkens the background it is on, not the survey
background.

--- a/brand-id/theme-id/StyleSheet.scss
+++ b/brand-id/theme-id/StyleSheet.scss
@@ -273,7 +273,7 @@
         }
         .ReadableAlt,
         .LightBG {
-          background: darken($body-background-color, 5%);
+          background: darken($main-container-background-color, 5%);
         }
         .ProgressBarFillContainer {
           @if $border-radius-on == true{
